update api functions
