# app/Http/Controllers/APIDetailController.php
@@ -157,107 +157,4 @@ class APIDetailController extends Controller
 
         return response()->json(['detail' => $detail]);
     }
-
-    /**
-     * @OA\Put(
-     *     path="/rest/details/{id}",
-     *     summary="Actualiza el detalle identificado por ID",
-     *     tags={"Details"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         description="ID of the detail",
-     *         required=true,
-     *         in="path",      
-     *         @OA\Schema(
-     *             type="integer",
-     *             format="int64",
-     *         )
-     *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"name"},
-     *             @OA\Property(property="product_id", description="ID del producto", type="integer"),
-     *             @OA\Property(property="quantity", description="Cantidad", type="integer", minimum=1),
-     *             @OA\Property(property="order_id", description="ID del pedido", type="integer")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Detail updated successfully",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string"),
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="Validation error",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Detail not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string")
-     *         )
-     *     )
-     * )
-     */
-    public function update(Request $request, $id)
-    {
-        $request->validate([
-            'product_id' => 'required|exists:product,id',
-            'quantity' => 'required|integer|min:1',
-            'order_id' => 'required|exists:order,id',
-        ]);
-
-        $detail = Detail::findOrFail($id);
-        $detail->product_id = $request->input('product_id');
-        $detail->quantity = $request->input('quantity');
-        $detail->order_id = $request->input('order_id');
-        $detail->save();
-
-        return response()->json(['message' => 'Detalle actualizado exitosamente.', 'detail' => $detail]);
-    }
-
-    /**
-     * @OA\Delete(
-     *     path="/rest/details/{id}",
-     *     summary="Elimina el detalle a partir de su ID",
-     *     tags={"Details"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="ID of the detail",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer",
-     *             format="int64"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Detail deleted successfully",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Detail not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string")
-     *         )
-     *     )
-     * )
-     */
-    public function destroy($id)
-    {
-        $detail = Detail::findOrFail($id);
-        $detail->delete();
-
-        return response()->json(['message' => 'Detalle eliminado exitosamente.']);
-    }
 }
