# app/Http/Controllers/APIOrderController.php
@@ -135,106 +135,4 @@ class APIOrderController extends Controller
 
         return response()->json(['order' => $order]);
     }
-
-    /**
-     * @OA\Put(
-     *     path="/rest/orders/{id}",
-     *     summary="Actualiza el pedido identificado por ID",
-     *     tags={"Orders"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         required=true,
-     *         description="ID of the order",
-     *         @OA\Schema(
-     *             type="integer",
-     *             format="int64",
-     *         )
-     *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\MediaType(
-     *             mediaType="application/x-www-form-urlencoded",
-     *             @OA\Schema(
-     *             @OA\Property(property="delivery_address", description="Direccion de envío", type="string")
-     *              )
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Order updated successfully",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string"),
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="Validation error",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Order not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string")
-     *         )
-     *     )
-     * )
-     */
-    public function update(Request $request, $id)
-    {
-        $request->validate([
-            'delivery_address' => 'string',
-        ]);
-
-        $order = Order::findOrFail($id);
-
-        if ($request->has('delivery_address')) {
-            $order->delivery_address = $request->input('delivery_address');
-        }
-        $order->save();
-
-        return response()->json(['message' => 'Orden actualizada exitosamente.', 'order' => $order]);
-    }
-
-    /**
-     * @OA\Delete(
-     *     path="/rest/orders/{id}",
-     *     summary="Elimina el pedido a partir de su ID",
-     *     tags={"Orders"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="ID of the order",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer",
-     *             format="int64"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Order deleted successfully",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Order not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string")
-     *         )
-     *     )
-     * )
-     */
-    public function destroy($id)
-    {
-        $order = Order::find($id);
-        $order->delete();
-
-        return response()->json(['message' => 'Orden eliminada exitosamente.']);
-    }
 }
